...
  "navigation": {
    "main": "Головна",
    "addNotes": "Додати нотатку",
    "editNote": "Редагувати нотатку",
    "noteDetails": "Деталі нотатки",
    "notes": "Нотатки",
    "settings": "Налаштування"
  },
  "home": {
    "subtitle": "Організуйте свої думки"
  },
  "note": {
    "created": "Створено:",
...
    "keepEditing": "Продовжити редагування"
  },
  "settings": {
    "language": "Мова",
    "languageDescription": "Виберіть бажану мову",
    "english": "Англійська",
    "ukrainian": "Українська"
  }
}

